# AtariTEXPLORE

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  QUESTIONS.txt  TODO.txt  build.sh  clean.sh  cmake_install.cmake  condor.asterix.desc  condor.sh  debug.sh  edit.diff  experiment  help.txt  map  run.sh  submit.sh  texplore_map
CMakeModules/: FindDirectFB.cmake
ale/: Makefile  ale
ale/auxlib/: libSDL_gfx.so.13
ale/liblocal/: build.sh
ale/liblocal/SDL-1.2.15/: Makefile  build-deps  config.status  libtool  sdl-config  sdl.pc
ale/liblocal/SDL-1.2.15/include/: SDL_config.h
ale/liblocal/SDL_gfx-2.0.24/: Makefile  Makefile.in  SDL_framerate.lo  SDL_gfx.pc  SDL_gfxBlitFunc.lo  SDL_gfxPrimitives.lo  SDL_imageFilter.lo  SDL_rotozoom.lo  aclocal.m4  config.status  configure  libSDL_gfx.la  libtool  libtool.bak
ale/liblocal/SDL_gfx-2.0.24/.deps/: SDL_framerate.Plo  SDL_gfxBlitFunc.Plo  SDL_gfxPrimitives.Plo  SDL_imageFilter.Plo  SDL_rotozoom.Plo
ale/liblocal/SDL_gfx-2.0.24/.libs/: libSDL_gfx.lai  libSDL_gfx.so.14  libSDL_gfx.so.14.9.1
ale/liblocal/SDL_gfx-2.0.24/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
ale/liblocal/SDL_image-1.2.12/: Makefile  config.status  libSDL_image.la  libtool  showimage
ale/liblocal/SDL_image-1.2.12/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
ale/liblocal/SDL_image-1.2.12/.libs/: libSDL_image-1.2.so.0.8.4  libSDL_image.lai  showimage
ale/liblocal/include/SDL/: SDL_config.h
ale/src/: ale_interface.hpp  ale_interface.hpp~
ale/src/common/: visual_processor.cpp  visual_processor.h
ale/src/common/.deps/: SoundNull.d
ale/src/emucore/: ALERandom.cxx  Cart3E.cxx  CartAR.cxx  CartE7.cxx  CartFASC.cxx  OSystem.cxx  Settings.cxx
ale/src/emucore/.deps/: ALERandom.d  CartAR.d  CartF4SC.d  Console.d  OSystem.d  PropsSet.d  PropsSet.d.bak  Settings.d
ale/src/games/supported/: Asterix.cpp  Freeway.cpp
ale/src/os_dependent/.deps/: OSystemUNIX.d
condor/: condor.desc
condor/results/: analyze.py  removeOutFiles.sh
condor/results/asterix/: condor.asterix1.desc  condor.asterix2.desc  condor.asterix3.desc  condor.asterix4.desc
condor/results/asterix/1.2.13.actrate1/: condor.err.0  condor.err.1  condor.err.2  condor.err.3  condor.err.4  condor.err.5  condor.err.6  condor.err.7  condor.err.8  condor.err.9
condor/results/asterix/1.2.13.actrate1.nohistory/: analyze.py  condor.err.0  condor.err.1  condor.err.2  condor.err.3  condor.err.4  condor.err.5  condor.err.6  condor.err.7  condor.err.8  condor.err.9
condor/results/asterix/1.9.13.etuct.require300.simpler/: condor.err.0  condor.err.1  condor.err.11  condor.err.13  condor.err.15  condor.err.16  condor.err.17  condor.err.18  condor.err.19  condor.err.22  condor.err.23  condor.err.24  condor.err.5  condor.err.6  condor.err.8  condor.err.9
condor/results/asterix/1.9.13.etuct.require300rollouts/: analyze.py  condor.err.0  condor.err.1  condor.err.11  condor.err.12  condor.err.13  condor.err.15  condor.err.17  condor.err.2  condor.err.20  condor.err.21  condor.err.22  condor.err.23  condor.err.25  condor.err.26  (+9 more)
condorResults/: analyze.py
condorResults/12.28.12.1.firstcondor.maxpath25/: condor.err.11  condor.err.13  condor.err.14  condor.err.16  condor.err.17  condor.err.18  condor.err.19  condor.err.22  condor.err.24  condor.err.25  condor.err.29  condor.err.3  condor.err.4  condor.err.6  condor.err.7  condor.err.9
oldcode/: ParallelETUCT.cc  images.tar
rl-texplore-ros-pkg/: .vimrc
rl-texplore-ros-pkg/.svn/: all-wcprops  entries
rl-texplore-ros-pkg/stacks/.svn/: all-wcprops  entries
rl-texplore-ros-pkg/stacks/reinforcement_learning/: CMakeCache.txt  Makefile  cmake_install.cmake  comands  comands~
rl_agent/: CMakeLists.txt  Makefile  cmake_install.cmake
rl_agent/include/rl_agent/: ModelBasedAgent.hh
rl_agent/src/: agent.cpp~
rl_agent/src/Agent/: ModelBasedAgent.cc
rl_agent/src/Models/: C45Tree.cc  ConstantClassifier.cc  ConstantClassifier.hh  FactoredModel.cc  FactoredModel.hh  M5Tree.cc  M5Tree.hh  ModelSpecification.hh  MultipleClassifiers.cc  MultipleClassifiers.hh
rl_agent/src/Planners/: ETUCT.cc  ETUCT.cc~  ETUCT.hh  ParallelETUCT.cc  ParallelETUCT.cc~  ParallelETUCT.hh
rl_common/: Makefile  cmake_install.cmake
rl_common/include/rl_common/: ModelSpecification.hh  core.hh
rl_env/: Makefile  cmake_install.cmake
rl_env/include/rl_env/: Arcade.hh  FuelRooms.hh
rl_env/src/Env/: Arcade.cc  Arcade.cc~  ArcadeAsterixRelative.cc  ArcadeFreewaySimple.cc  ArcadeGeneral.cc  FuelRooms.cc
rl_experiment/: CMakeLists.txt
src/: condorrl.cc  nocondorrl.cc  rl.cc  rl.invalidtreatedasfirst.cc  rl.noinvalidallowed.cc
standalone/: Makefile  build.sh  experiment
standalone/rl_common/: CMakeLists.txt
standalone/rl_env/: CMakeLists.txt  Makefile
standalone/rl_env/src/: env.cpp~
standalone/rl_env/src/Env/: Arcade.cc
standalone/rl_experiment/: Makefile
standalone/rl_experiment/src/: rl.cc
(+297 files in other folders)
